Fixing CSS support on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -127,9 +127,11 @@ a.nav-link:active {
 /* hide nav bar */
 
 @media screen and (max-width: 980px) {
+    body {
+        overflow: auto;
+    }
     .layout {
         flex-direction: column;
-        min-height: 100%;
         margin-top: 5vh;
     }
     .navbar {
